flash row updates

--- a/public/index.html
+++ b/public/index.html
@@ -143,20 +143,20 @@
     /* Flash animations for updated rows */
     @keyframes flashGreen {
       0% { background-color: inherit; }
-      50% { background-color: #004400; }
+      30% { background-color: #57734a; }
       100% { background-color: inherit; }
     }
     .flash-green {
-      animation: flashGreen 0.5s ease;
+      animation: flashGreen 0.4s ease;
     }
 
     @keyframes flashRed {
       0% { background-color: inherit; }
-      50% { background-color: #660000; }
+      30% { background-color: #6b4545; }
       100% { background-color: inherit; }
     }
     .flash-red {
-      animation: flashRed 0.5s ease;
+      animation: flashRed 0.4s ease;
     }
   </style>
 </head>
