--- a/public/closedTrades.html
+++ b/public/closedTrades.html
@@ -76,6 +76,29 @@
       background-color: #2e2e2e;
     }
   </style>
+  <style>
+  .modal {
+    display: none; /* Hide by default */
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.6);
+  }
+  .modal-content {
+    background-color: #2e2e2e;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 400px;
+    border-radius: 8px;
+    color: #ffffff;
+  }
+</style>
+
 </head>
 <body>
   <!-- Navigation -->
