--- a/public/closedTrades.html
+++ b/public/closedTrades.html
@@ -86,7 +86,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: #3e3e5e;
+    background-color: rgba(0,0,0,0.6);
   }
   .modal-content {
     background-color: #2e2e2e;
