last context menu update hopefully

--- a/public/closedTrades.html
+++ b/public/closedTrades.html
@@ -76,7 +76,8 @@
       background-color: #2e2e2e;
     }
   </style>
-  <style>
+<style>
+  /* Modal styles */
   .modal {
     display: none; /* Hide by default */
     position: fixed;
@@ -97,7 +98,23 @@
     border-radius: 8px;
     color: #ffffff;
   }
+  /* Ensure each label and input take up full width */
+  .modal-content label {
+    display: block;
+    margin-bottom: 5px;
+  }
+  .modal-content input {
+    display: block;
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0 15px;
+    border: 1px solid #555;
+    border-radius: 4px;
+    background-color: #3e3e5e;
+    color: #ffffff;
+  }
 </style>
+
 
 </head>
 <body>
