--- a/public/closedTrades.html
+++ b/public/closedTrades.html
@@ -154,6 +154,7 @@
         <th>Position Size</th>
         <th>Exit Price</th>
         <th>Profit</th>
+		<th>% Profit</th>
         <th>Duration</th>
         <th>Fees</th>
       </tr>
