--- a/public/closedTrades.html
+++ b/public/closedTrades.html
@@ -155,7 +155,7 @@
         <th>Exit Price</th>
         <th>Profit</th>
 		<th>% Profit</th>
-        <th>Duration</th>
+        <th>Duration (Days)</th>
         <th>Fees</th>
       </tr>
     </thead>
